clang/test/BSC/Negative/Ownership/RuleCheck/basic/basic.cbs
// RUN: %clang_cc1 -verify %s

int * _Owned initIPO();
struct S * _Owned initS();

int f1() {
	int * _Owned a = initIPO(), * _Owned b;
	b = a;
	return 0; // expected-error {{memory leak of value: `b`}}
}

int f2() {
	int * _Owned a = initIPO(), * _Owned b = a;
	return 0; // expected-error {{memory leak of value: `b`}}
}

int f3() {
	int * _Owned a = initIPO(), * _Owned b, * _Owned c;
	b = a;
	c = b;
	return 0; // expected-error {{memory leak of value: `c`}}
}

int f4() {
	int flag = 1;
	int * _Owned a = initIPO();
	int * _Owned b, * _Owned c;
	if (flag) {
		b = a;
	} else {
		c = a;
	}
	return 0; // expected-error {{memory leak of value: `b`}} expected-error {{memory leak of value: `c`}}
}

int f5() {
	int flag = 1;
	int * _Owned a = initIPO();
	if (flag) {
		int * _Owned b = a;
	} else { // expected-error {{memory leak of value: `b`}}
		int * _Owned c = a;
	} // expected-error {{memory leak of value: `c`}}
	return 0;
}

int f6() {
	int flag = 2;
	int * _Owned a = initIPO();
	int * _Owned b = initIPO();
	int * _Owned c;
	switch (flag) {
		case 1: c = a; break;
		case 2: c = b; break;
		default: break;
	}
	return 0; // expected-error {{memory leak of value: `c`}} expected-error {{memory leak of value: `b`}} expected-error {{memory leak of value: `a`}}
}

int f7() {
	int * _Owned a = initIPO();
	int * _Owned b = initIPO();
	{
		int * _Owned c = b;
	} // expected-error {{memory leak of value: `c`}}
	return 0; // expected-error {{memory leak of value: `a`}}
}

struct S {
	int a;
	int b;
};

int f8() {
	struct S * _Owned s1 = initS();
	struct S * _Owned s2 = s1;
	return 0; // expected-error {{memory leak of value: `s2`}}
}

int f9() {
	int * _Owned a = initIPO();
	{
		int * _Owned b = a;
		{
			int * _Owned c = b;
		} // expected-error {{memory leak of value: `c`}}
	}
	return 0;
}

int f10() {
	int local = 1;
	int * _Owned a = __take_from_raw(&local);
	int * _Owned b = a;
	return 0; // expected-error {{memory leak of value: `b`}}
}

int * _Owned f11(int * _Owned a)
{
  const int local = 2;
  const int * _Owned b = __take_from_raw(&local);
  *a -= *b;
  return a; // expected-error {{memory leak of value: `b`}}
}

int * _Owned f12(int * _Owned a)
{
  const int local = 1;
  const int * _Owned b = __take_from_raw(&local);
  *a = *a - *b;
  return a; // expected-error {{memory leak of value: `b`}}
}
